--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </nav>
 
-<p class="p3"><marquee behavior="" direction="right">Inter results out Now check your results in <a href="result.html">www.interresults.com</a></marquee></p>
+<p class="p3"><marquee behavior="" direction="right">Check your results in <a href="result.html">www.interresults.com</a></marquee></p>
 
 <p class="p1">Welcome to Board of Intermediate Education (BIEAP)
     The Board of Intermediate Education Andhra Pradesh is an autonomous board, established under Indian education act. To offer specialized services to the private and other agencies in the field of education, in general, and school education, in particular, for the development and growth of distance and open school system and develop proper curriculum for vocational and enduring education to prepare student population for the world of work.
