--- a/colleges.html
+++ b/colleges.html
@@ -17,7 +17,7 @@
     <nav class="actice">
 
         <a href="index.html"><i class='bx bxs-home'></i> Home</a>
-        <a href="@"><i class='bx bx-buildings'></i>Colleges</a>
+        <a href="colleges.html"><i class='bx bx-buildings'></i>Colleges</a>
         <a href="result.html"><i class='bx bx-book-reader'></i>Results</a>
         <a href="timetable.html"><i class='bx bx-table'></i>Exam Time Table</a>
         <a href="@"><i class='bx bxs-book-open'></i>Previous Year Question Papers</a>
